--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Particles Flow Field • PixiJS v8 + WebG</title>
+    <title>Particles Flow Field • PixiJS v8 + WebGL</title>
     <style>
         * {
             margin: 0;
@@ -41,9 +41,35 @@
 
         .controls h3 {
             margin-bottom: 15px;
-            font-size: 14px;
+            font-size: 16px;
             font-weight: 600;
             color: #00ff88;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            transition: all 0.3s ease;
+        }
+
+        .controls h3 .mode-icon {
+            font-size: 18px;
+            animation: pulse 2s ease-in-out infinite;
+        }
+
+        .controls h3 .mode-mode {
+            font-size: 11px;
+            color: #aaa;
+        }
+
+        @keyframes pulse {
+
+            0%,
+            100% {
+                transform: scale(1);
+            }
+
+            50% {
+                transform: scale(1.15);
+            }
         }
 
         .control-group {
@@ -63,14 +89,14 @@
         }
 
         .mode-buttons {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
+           display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
             gap: 8px;
             margin-bottom: 15px;
         }
 
         .mode-btn {
-            padding: 8px;
+            padding: 10px;
             background: rgba(255, 255, 255, 0.1);
             border: 1px solid rgba(255, 255, 255, 0.2);
             border-radius: 6px;
@@ -89,7 +115,6 @@
             background: #00ff88;
             color: #000;
             border-color: #00ff88;
-            font-weight: 600;
         }
 
         .control-group button {
@@ -121,13 +146,14 @@
             position: absolute;
             top: 20px;
             left: 20px;
-            background: rgba(0, 0, 0, 0.7);
+            background: rgba(0, 0, 0, 0.3);
             padding: 10px 15px;
             border-radius: 8px;
             color: #00ff88;
-            font-size: 12px;
+            font-size: 18px;
             font-family: 'Courier New', monospace;
             backdrop-filter: blur(10px);
+            font-weight: 600;
         }
 
         .cursor {
@@ -157,22 +183,27 @@
 
     <div class="stats">
         <div>FPS: <span id="fps">60</span></div>
-        <div>Частицы: <span id="particle-count">10000</span></div>
     </div>
 
     <div class="controls">
-        <h3>Flow Field ⚡</h3>
+        <h3 id="mode-title">
+            <span class="mode-icon">🌀</span>
+            <span id="mode-text">Chaos Field</span>
+            <span class="mode-mode">Mode</span>
+        </h3>
 
         <div class="mode-buttons">
-            <button class="mode-btn active" data-mode="flow">Flow</button>
+            <button class="mode-btn active" data-mode="chaos">Chaos</button>
+            <button class="mode-btn" data-mode="flow">Flow</button>
             <button class="mode-btn" data-mode="galaxy">Galaxy</button>
             <button class="mode-btn" data-mode="vortex">Vortex</button>
-            <button class="mode-btn" data-mode="chaos">Chaos</button>
+            <button class="mode-btn" data-mode="wave">Wave</button>
+            <button class="mode-btn" data-mode="magnetic">Magnetic</button>
         </div>
 
         <div class="control-group">
-            <label>Колличество частиц: <span id="particle-value">3000</span></label>
-            <input type="range" id="particles" min="1000" max="50000" step="500" value="3000">
+            <label>Колличество частиц: <span id="particle-value">200</span></label>
+            <input type="range" id="particles" min="1000" max="50000" step="500" value="2500">
         </div>
 
         <div class="control-group">
@@ -181,13 +212,13 @@
         </div>
 
         <div class="control-group">
-            <label>Длина маршрута: <span id="trail-value">0.95</span></label>
+            <label>Длина маршрута: <span id="trail-value">0.88</span></label>
             <input type="range" id="trail" min="0.85" max="0.99" step="0.01" value="0.95">
         </div>
 
         <div class="control-group">
-            <label>Величина поля: <span id="scale-value">100</span></label>
-            <input type="range" id="scale" min="50" max="300" step="10" value="100">
+            <label>Величина поля: <span id="scale-value">80</span></label>
+            <input type="range" id="scale" min="50" max="300" step="10" value="80">
         </div>
 
         <div class="control-group">
