--- a/index.html
+++ b/index.html
@@ -5,175 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Particles Flow Field • PixiJS v8 + WebGL</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            width: 100vw;
-            height: 100vh;
-            overflow: hidden;
-            background: #050000;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-
-        #canvas-container {
-            width: 100%;
-            height: 100%;
-            cursor: none;
-        }
-
-        .controls {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            background: rgba(0, 27, 31, 0.85);
-            padding: 20px;
-            border-radius: 12px;
-            color: white;
-            min-width: 220px;
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-        }
-
-        .controls h3 {
-            margin-bottom: 15px;
-            font-size: 16px;
-            font-weight: 600;
-            color: #00ff88;
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            transition: all 0.3s ease;
-        }
-
-        .controls h3 .mode-icon {
-            font-size: 18px;
-            animation: pulse 2s ease-in-out infinite;
-        }
-
-        .controls h3 .mode-mode {
-            font-size: 11px;
-            color: #aaa;
-        }
-
-        @keyframes pulse {
-
-            0%,
-            100% {
-                transform: scale(1);
-            }
-
-            50% {
-                transform: scale(1.15);
-            }
-        }
-
-        .control-group {
-            margin-bottom: 15px;
-        }
-
-        .control-group label {
-            display: block;
-            margin-bottom: 5px;
-            font-size: 12px;
-            color: #aaa;
-        }
-
-        .control-group input[type="range"] {
-            width: 100%;
-            cursor: pointer;
-        }
-
-        .mode-buttons {
-           display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            gap: 8px;
-            margin-bottom: 15px;
-        }
-
-        .mode-btn {
-            padding: 10px;
-            background: rgba(255, 255, 255, 0.1);
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            border-radius: 6px;
-            color: white;
-            cursor: pointer;
-            font-size: 12px;
-            transition: all 0.3s;
-        }
-
-        .mode-btn:hover {
-            background: rgba(255, 255, 255, 0.2);
-            border-color: #00ff88;
-        }
-
-        .mode-btn.active {
-            background: #00ff88;
-            color: #000;
-            border-color: #00ff88;
-        }
-
-        .control-group button {
-            width: 100%;
-            padding: 10px;
-            background: linear-gradient(135deg, #dd5e0a 0%, #006e32 100%);
-            border: none;
-            border-radius: 6px;
-            color: white;
-            cursor: pointer;
-            font-size: 14px;
-            font-weight: 600;
-            transition: transform 0.2s;
-        }
-
-        .control-group button:hover {
-            transform: translateY(2px);
-        }
-
-        .info {
-            position: absolute;
-            bottom: 20px;
-            left: 20px;
-            color: rgba(255, 255, 255, 0.6);
-            font-size: 12px;
-        }
-
-        .stats {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            background: rgba(0, 0, 0, 0.3);
-            padding: 10px 15px;
-            border-radius: 8px;
-            color: #00ff88;
-            font-size: 18px;
-            font-family: 'Courier New', monospace;
-            backdrop-filter: blur(10px);
-            font-weight: 600;
-        }
-
-        .cursor {
-            position: fixed;
-            width: 60px;
-            height: 60px;
-            border: 2px solid rgba(0, 255, 136, 0.5);
-            border-radius: 50%;
-            pointer-events: none;
-            transform: translate(-50%, -50%);
-            transition: width 0.2s, height 0.2s;
-            z-index: 1000;
-        }
-
-        .cursor.active {
-            width: 80px;
-            height: 80px;
-            border-color: rgba(0, 255, 136, 0.8);
-        }
-    </style>
+    <link rel="stylesheet" href="/src/styles/main.css">
 </head>
 
 <body>
@@ -203,7 +35,7 @@
 
         <div class="control-group">
             <label>Колличество частиц: <span id="particle-value">200</span></label>
-            <input type="range" id="particles" min="1000" max="50000" step="500" value="2500">
+            <input type="range" id="particles" min="500" max="50000" step="500" value="2500">
         </div>
 
         <div class="control-group">
@@ -230,7 +62,7 @@
         🖱️ Двигайте мышкой, чтобы взаимодействовать с частицами • PixiJS v8 + WebGL
     </div>
 
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/main.ts"></script>
 </body>
 
 </html>
